--- a/signup.css
+++ b/signup.css
@@ -1,53 +1,82 @@
 * {
-  font-family: sans-serif;
+  margin: 0px;
+  padding: 0px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+/*? <!----------------------------------------------- < CSS for signup page > -----------------------------------------------> */
+body {
+  position: relative;
+  background-color: #e3ddd2;
+}
+#nav {
+  height: 70px;
+  width: auto;
+  display: flex;
+}
+body {
+  background-color: #e3ddd2;
+}
+#nav img {
+  height: 70px;
 }
 
-/* **********************8********** css for signup page********************************** */
+#nav h3 {
+  margin-top: 30px;
+}
 .box {
-  width: 500px;
-  height: 470px;
-
-  margin: auto;
+  height: fit-content;
+  background-color: white;
+  padding: 25px;
+  margin: 12px auto;
+  width: 490px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  transform: translateY(-35px);
 }
-body > div {
-  padding: 35px;
-}
 
+#createacc {
+  color: orange;
+  font-weight: 500;
+  margin-left: 10px;
+  margin-bottom: 12px;
+}
 #admin {
   position: fixed;
   cursor: pointer;
-  bottom: 10px;
+  right: 25px;
   top: 10px;
-  max-height: 30px;
-  padding: 5px;
+  font-weight: bold;
+  max-height: 40px;
+  padding: 10px;
+  border: 2px solid transparent;
   color: rgb(255, 255, 255);
-  background-color: teal;
+  background-color: #f7b139;
   border: 0px;
-  border-radius: 5px;
 }
 #admin:hover {
-  background-color: #faa619;
+  border: 2px solid white;
 }
 .form {
-  width: 40%;
-  height: 400px;
   margin: auto;
   margin-left: 80px;
   font-size: 20px;
   font-weight: bold;
-  height: 20px;
   flex: 0 0 200px;
   margin-left: 10px;
-  line-height: 1.9;
 }
-
+#logo {
+  height: 120px;
+  width: 300px;
+  z-index: 1000000;
+}
+.head > a {
+  width: 100%;
+  display: grid;
+  place-items: center;
+}
 .head {
-  width: 200px;
-
-  display: flex;
-  justify-content: space-around;
-  padding-left: 5px;
-  align-items: center;
+  display: grid;
+  place-items: center;
 }
 .box > h1 {
   color: #faa619;
@@ -56,67 +85,60 @@ body > div {
 #name,
 #email,
 #pass {
-  padding: 5px;
-  width: 30rem;
+  padding: 3px;
+  font-size: 18px;
+  padding-left: 15px;
+  width: 92%;
   height: 40px;
   border-radius: 3px;
   border: 2px solid lightgray;
 }
-
 #pass + input {
+  cursor: pointer;
   height: 40px;
   margin: auto;
-  width: 500px;
-  margin-bottom: 20px;
+  width: 97%;
+  padding: 10px auto;
   border-radius: 3px;
   background-color: #faa619;
   color: white;
   border: 0;
 }
+#pass + input:hover {
+  background-color: #f7b139;
+}
 
 .btm {
-  width: 500px;
+  width: 92%;
   height: 200px;
-
   margin: auto;
   margin-bottom: 40px;
   text-align: center;
-  padding-left: 20px;
-  line-height: 1;
-
   font-size: 15px;
-  /* padding-top: 10px; */
 }
 
 .btm > button {
-  line-height: 1.8;
   height: 40px;
-  width: 508px;
+  width: 100%;
   border-radius: 3px;
-
   border: 2px solid lightgray;
   font-size: 15px;
 }
 
 .goo {
   height: 40px;
-  width: 495px;
+  width: 100%;
   border-radius: 3px;
+  margin: auto;
+  margin-top: 10px;
   margin-bottom: 25px;
   font-size: 20px;
   background-color: white;
   line-height: 1.8;
   border: 2px solid lightgray;
   display: flex;
-  margin-top: 50px;
 }
-.head > a > img {
-  width: 100%;
-  margin: auto;
-  margin-left: 68%;
-  margin-top: 30px;
-  height: 100%;
-}
+
 .or {
   z-index: 110;
   margin: 42px 0px;
@@ -138,14 +160,7 @@ body > div {
 .required {
   color: red;
 }
-body > div {
-  height: 740px;
-  margin: auto;
-  width: 560px;
 
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  border-radius: 7px;
-}
 ::placeholder {
   color: rgb(212, 212, 212);
 }
