--- a/Admin-Login.css
+++ b/Admin-Login.css
@@ -1,34 +1,31 @@
 * {
-  font-family: sans-serif;
+  margin: 0px;
+  padding: 0px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 .box {
-  width: 500px;
-  height: 400px;
-
-  margin: auto;
+  border: 1px solid rgb(192, 184, 184);
+  width: 400px;
+  height: auto;
+  padding: 30px 50px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  margin: 10px auto;
+  backdrop-filter: blur(10.2rem);
 }
 input {
   padding-left: 10px;
 }
 .form {
-  width: 210px;
-  height: 400px;
-
   margin: auto;
-  margin-left: 80px;
   font-size: 20px;
   font-weight: bold;
-  height: 20px;
-  flex: 0 0 200px;
-  margin-left: 10px;
   line-height: 1.9;
 }
-.box > .head {
-  margin-left: 140px;
-}
+
 .head {
   width: 200px;
-
+  margin: auto;
   display: flex;
   justify-content: space-around;
   padding-left: 5px;
@@ -39,27 +36,29 @@ input {
 #username,
 #pass {
   height: 40px;
-  width: 500px;
+  width: 97%;
   border-radius: 3px;
   border: 2px solid lightgray;
 }
 #pass + input {
   height: 40px;
-  width: 508px;
+  width: 100%;
   border-radius: 3px;
   background-color: rgb(7, 104, 248);
   color: white;
   border: 0;
 }
+.head {
+  width: 400px;
+}
+.head > a > img {
+  margin: 0px;
+  width: 300px;
+}
 .btm {
-  width: 500px;
-  height: 200px;
-
+  width: 100%;
   margin: auto;
   text-align: center;
-  padding-left: 20px;
-  line-height: 1;
-
   font-size: 16px;
 }
 .btm > button {
@@ -67,31 +66,41 @@ input {
   height: 40px;
   width: 508px;
   border-radius: 3px;
-
   border: 2px solid lightgray;
   font-size: 15px;
 }
 
 .gooo {
-  height: 40px;
-  width: 508px;
+  height: 50px;
+  width: 98%;
   border-radius: 3px;
   font-size: 20px;
   background-color: white;
-  line-height: 1.8;
-
-  display: flex;
-  margin: auto;
-
   border: 2px solid lightgray;
+  display: flex;
+  justify-content: center;
+  place-items: center;
 }
-.gooo > mark {
+#continue {
+  cursor: pointer;
+  margin-top: 15px;
+  font-size: 20px;
+  font-weight: bold;
+  padding: 7px;
+}
+#continue:hover {
+  background-color: #ffbc49;
+}
+#google {
+  width: 7%;
+  padding-left: 15px;
+}
+.gooo > label {
   background-color: white;
   font-size: 20px;
   color: rgb(7, 104, 248);
   border-radius: 3px;
   padding-bottom: 3px;
-  margin-left: 28%;
 }
 .signin {
   display: flex;
