--- a/mensAllProducts.css
+++ b/mensAllProducts.css
@@ -1,14 +1,9 @@
 * {
-  font-family: sans-serif;
   margin: 0px;
   padding: 0px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
-body {
-  font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI",
-    Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", Helvetica, Arial,
-    sans-serif;
-}
-
 #productName {
   padding-left: 12px;
   height: 40px;
