--- a/CSS/HeaderFooter.css
+++ b/CSS/HeaderFooter.css
@@ -1,11 +1,4 @@
-* {
-  margin: 0px;
-  padding: 0px;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
-
-/*?<!----------------------------------------------- Header CSS -----------------------------------------------> */
+/*todo <!----------------------------------------------- < Header Start > -----------------------------------------------> */
 #top_bar {
   margin: auto;
   display: flex;
@@ -13,12 +6,33 @@
   color: white;
   background-color: black;
   text-align: center;
-  height: 50px;
   padding-left: 5%;
   padding-right: 5%;
+  width: 100%;
+  z-index: 1;
+  top: 0px;
 }
-#top_bar h5 {
-  margin: auto;
+#EmptyNavSpace {
+  display: none;
+  width: 100%;
+  height: 87px;
+}
+#logo {
+  border-radius: 5px;
+  width: 220px;
+}
+#yellopatti {
+  height: 35px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 600;
+  color: white;
+  font-size: 18px;
+  /* text-shadow: 1px 1px 1px rgb(255, 255, 255); */
+  opacity: 1;
+  background: url(./movingpattern.webp);
 }
 #left_top {
   display: grid;
@@ -31,63 +45,191 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
 }
-/* html {
-  position: relative;
-} */
-#nav_bar {
-  z-index: 1000000;
-  position: sticky;
-  top: 0px;
-  padding: 1px;
-  background-color: rgb(246, 249, 247);
-}
-#nav_bar > div {
-  margin: 20px;
-  margin-left: 240px;
-  width: 80%;
+#nav {
+  padding: 0px 80px;
+  width: 100%;
+  z-index: 3;
   display: flex;
-  justify-content: right;
-  background-color: rgb(246, 249, 247);
+  background-color: #f7f7f8;
+  justify-content: center;
+  align-items: center;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
+    rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+}
+.stickky {
+  position: fixed;
+  width: 100% !important;
+  top: 0;
+}
+#nav_bar {
+  display: flex;
+  justify-content: space-evenly;
+  background-color: #f7f7f8;
   text-align: center;
+  width: 100%;
+  z-index: 1;
 }
-#logo {
-  position: absolute;
-  border-radius: 5px;
-  width: 230px;
-  height: 90px;
-}
-#nav_bar > div > a > input {
-  height: 33px;
-  padding: 3px;
+
+#nav_bar > input {
+  height: 40px;
   width: 250px;
+  border: 0.5px solid rgb(182, 181, 181);
+  padding-left: 11px;
 }
-#nav_bar > div > a {
+
+#nav_bar > a {
+  display: grid;
+  place-items: center;
   text-decoration: none;
   color: black;
-  margin: auto;
 }
-/* ?<!----------------------------------------------- Footer CSS -----------------------------------------------> */
+#nav_bar > a:hover {
+  color: orange;
+}
+#women_list {
+  height: 300px;
+  display: flex;
+  justify-content: space-evenly;
+  padding: 20px;
+
+  display: none;
+  margin-top: 10px;
+}
+#womin_list_last a {
+  display: flex;
+  flex-direction: column;
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+}
+#women_list a,
+#mens_list a,
+#kids_list a,
+#shoes_bag_list a,
+#beauty_list a {
+  text-decoration: none;
+  color: rgb(123, 121, 121);
+}
+#women_list > div a:first-child,
+#mens_list a:first-child,
+#kids_list a:first-child,
+#shoes_bag_list a:first-child,
+#beauty_list a:first-child {
+  color: black;
+  font-size: larger;
+  font-weight: bold;
+}
+#women_list a:hover,
+#mens_list a:hover,
+#kids_list a:hover,
+#shoes_bag_list a:hover,
+#beauty_list a:hover {
+  color: orange;
+}
+#women_list > div a:first-child:hover {
+  color: orange;
+}
+
+#mens_list {
+  height: 300px;
+  display: flex;
+  justify-content: space-evenly;
+  padding: 10px;
+  margin-top: 10px;
+  padding-bottom: 30px;
+  display: none;
+}
+#kids_list {
+  height: 300px;
+  margin-top: 10px;
+  display: flex;
+  justify-content: space-evenly;
+  padding: 10px;
+
+  padding-bottom: 30px;
+  display: none;
+}
+#shoes_bag_list {
+  height: 300px;
+  margin-top: 10px;
+  display: flex;
+  justify-content: space-evenly;
+  padding: 10px;
+  padding-bottom: 30px;
+  display: none;
+}
+#beauty_list {
+  height: 300px;
+  margin-top: 10px;
+  display: flex;
+  justify-content: space-evenly;
+  padding: 10px;
+
+  padding-bottom: 30px;
+  display: none;
+}
+/*todo <!----------------------------------------------- < Header End > -----------------------------------------------> */
+/*todo <!----------------------------------------------- < Footer > -----------------------------------------------> */
+#FooterSection {
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
+    rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+}
+
+#footer {
+  margin-top: 50px;
+  padding: 0px 70px;
+  justify-content: start;
+  align-items: start;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  font-size: larger;
+}
+#footer > div {
+  padding: 0px 30px;
+  line-height: 0.7;
+  display: flex;
+
+  flex-direction: column;
+}
+#footer a {
+  text-align: left;
+  text-decoration: none;
+  color: rgb(158, 156, 156);
+  margin-bottom: 5px;
+}
+#footer a:hover {
+  color: orange;
+}
+#contact {
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
+    rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+  padding: 10px;
+  display: flex;
+  margin-top: 40px;
+  justify-content: space-evenly;
+  font-size: larger;
+}
+#contact img {
+  width: 10%;
+  margin-right: 20px;
+}
 #subscribe {
   height: 300px;
-  margin-left: 8%;
 }
 #subscribe {
   margin-top: 50px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 #email_subs {
   margin-top: 20px;
-  margin-left: 20px;
 }
 #email_subs > p {
   margin-bottom: 30px;
 }
 #email_subs > input {
   width: 300px;
-  padding: 0px 8px;
   height: 50px;
-  margin-left: 10px;
 }
 #email_subs > button {
   width: 200px;
@@ -104,201 +246,13 @@
   margin-bottom: 30px;
 }
 #play_store > button {
-  padding: 10px;
-  height: auto;
+  height: 60px;
   width: 150px;
   background-color: black;
   color: white;
-  font-size: 18px;
-  font-weight: bold;
+  text-anchor: middle;
+  font-size: larger;
   border-radius: 5px;
   margin-bottom: 20px;
 }
-#footer {
-  margin-top: 50px;
-  height: 500px;
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  margin-left: 8%;
-  font-size: larger;
-}
-#footer a {
-  text-decoration: none;
-  color: rgb(158, 156, 156);
-  margin-bottom: 5px;
-}
-#footer a:hover {
-  color: orange;
-}
-#contact {
-  display: flex;
-  margin-top: 120px;
-  margin-left: 8%;
-  margin-bottom: 15px;
-  justify-content: space-evenly;
-  font-size: larger;
-}
-#contact img {
-  width: 10%;
-  margin-right: 20px;
-}
-
-#myBtn {
-  display: none;
-  position: fixed;
-  bottom: 20px;
-  right: 30px;
-  z-index: 99;
-  font-size: 18px;
-  border: none;
-  outline: none;
-  background-color: red;
-  color: white;
-  cursor: pointer;
-  padding: 15px;
-  border-radius: 4px;
-}
-
-#myBtn:hover {
-  background-color: orange;
-}
-
-.sidenav {
-  height: 100%;
-  width: 0;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: #111;
-  overflow-x: hidden;
-  transition: 0.5s;
-  padding-top: 60px;
-}
-
-.sidenav a {
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
-}
-
-.sidenav a:hover {
-  color: #f1f1f1;
-}
-
-.sidenav .closebtn {
-  position: absolute;
-  top: 0;
-  right: 25px;
-  font-size: 36px;
-  margin-left: 50px;
-}
-#side_menu {
-  display: none;
-}
-
-/*? ----------------------------Medium Screen Sizes -------------------------------- */
-
-@media all and (min-width: 810px) and (max-width: 1280px) {
-  /* <!----------------------------------------------- Header -----------------------------------------------> */
-  #top_bar {
-    flex-direction: column;
-    height: auto;
-    padding: 7px;
-  }
-  #top_bar h5 {
-    font-size: 10px;
-    font-weight: light;
-  }
-  #right_top {
-    display: none;
-  }
-  #logo {
-    position: relative;
-    top: 8px;
-    left: 40%;
-  }
-  #nav_bar > div {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    gap: 2px;
-    margin: auto;
-  }
-  #searchbar {
-    display: none;
-  }
-  #signin {
-    background-color: #f7f4f4;
-    padding: 10px;
-  }
-}
-/*?----------------------------Small Screen Sizes -------------------------------- */
-@media all and (min-width: 10px) and (max-width: 809px) {
-  * {
-    font-size: 12px;
-  }
-  /* <!----------------------------------------------- Header -----------------------------------------------> */
-  #top_bar {
-    flex-direction: column;
-    height: auto;
-    padding: 7px;
-  }
-  #top_bar h5 {
-    font-size: 10px;
-    font-weight: light;
-  }
-  #right_top {
-    display: none;
-  }
-  #logo {
-    position: relative;
-    top: 8px;
-    left: 25%;
-  }
-  #nav-bar {
-    flex-direction: column;
-  }
-  #nav_bar > div {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    gap: 2px;
-    margin: auto;
-  }
-  #searchbar {
-    display: none;
-  }
-  #signin {
-    background-color: #f7f4f4;
-    padding: 10px;
-  }
-
-  /* <!----------------------------------------------- Footer -----------------------------------------------> */
-  #subscribe {
-    flex-direction: column;
-  }
-  #email_subs > input {
-    margin: auto;
-    margin-bottom: 2px;
-    border: 1px solid black;
-  }
-  #play_store {
-    margin: auto;
-  }
-  #email_subs > button {
-    width: 95%;
-  }
-  #contact {
-    margin: auto;
-    display: grid;
-    margin: 20px;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 10px;
-    align-items: center;
-  }
-  #footer {
-    grid-template-columns: repeat(3, 1fr);
-  }
-}
+/*todo <!----------------------------------------------- < Footer End > -----------------------------------------------> */
