--- a/CSS/index.css
+++ b/CSS/index.css
@@ -5,219 +5,98 @@
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   scroll-behavior: smooth;
 }
-#top_bar {
-  margin: auto;
-  display: flex;
-  justify-content: space-between;
-  color: white;
-  background-color: black;
-  text-align: center;
-  padding-left: 5%;
-  padding-right: 5%;
-  width: 100%;
-  z-index: 1;
-  position: sticky;
-  top: 0px;
-}
+/*todo <!----------------------------------------------- < Main Pages Start > -----------------------------------------------> */
 
-#left_top {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 40px;
-}
-
-#right_top {
-  width: 30%;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-}
-
-#nav_bar {
-  display: flex;
-  justify-content: space-evenly;
-  background-color: #f7f7f8;
-  padding-top: 5px;
-  text-align: center;
-  width: 100%;
-  position: fixed;
-  z-index: 1;
-}
-#logo {
-  position: relative;
-  border-radius: 5px;
-  width: 220px;
-  height: 92px;
-  padding-bottom: 5px;
-}
-#nav_bar > input {
-  height: 40px;
-  width: 250px;
-  margin-top: 27px;
-  border: 0.5px solid rgb(182, 181, 181);
-  padding-left: 11px;
-}
-
-#nav_bar > a {
-  display: grid;
-  place-items: center;
-  text-decoration: none;
-  color: black;
-}
-#nav_bar > a:hover {
-  color: orange;
-}
-#women_list {
-  height: 300px;
-  display: flex;
-  justify-content: space-evenly;
-  padding: 20px;
-  margin-left: 5%;
-  display: none;
-  margin-top: 120px;
-}
-#womin_list_last a {
-  display: flex;
-  flex-direction: column;
-  text-decoration: none;
-  color: black;
-  font-weight: bold;
-}
-#women_list a,
-#mens_list a,
-#kids_list a,
-#shoes_bag_list a,
-#beauty_list a {
-  text-decoration: none;
-  color: rgb(123, 121, 121);
-}
-#women_list > div a:first-child,
-#mens_list a:first-child,
-#kids_list a:first-child,
-#shoes_bag_list a:first-child,
-#beauty_list a:first-child {
-  color: black;
-  font-size: larger;
-  font-weight: bold;
-}
-#women_list a:hover,
-#mens_list a:hover,
-#kids_list a:hover,
-#shoes_bag_list a:hover,
-#beauty_list a:hover {
-  color: orange;
-}
-#women_list > div a:first-child:hover {
-  color: orange;
-}
-
-#mens_list {
-  height: 300px;
-  display: flex;
-  justify-content: space-evenly;
-  padding: 10px;
-  margin-left: 5%;
-  margin-top: 120px;
-  padding-bottom: 30px;
-  display: none;
-}
-#kids_list {
-  height: 300px;
-  margin-top: 120px;
-  display: flex;
-  justify-content: space-evenly;
-  padding: 10px;
-  margin-left: 5%;
-
-  padding-bottom: 30px;
-  display: none;
-}
-#shoes_bag_list {
-  height: 300px;
-  margin-top: 120px;
-  display: flex;
-  justify-content: space-evenly;
-  padding: 10px;
-  margin-left: 5%;
-
-  padding-bottom: 30px;
-  display: none;
-}
-#beauty_list {
-  height: 300px;
-  margin-top: 120px;
-  display: flex;
-  justify-content: space-evenly;
-  padding: 10px;
-  margin-left: 5%;
-
-  padding-bottom: 30px;
-  display: none;
-}
 .carousel-inner > .item > img,
 .carousel-inner > .item > a > img {
   margin: auto;
   width: 200%;
 }
 #banner {
-  margin-top: 150px;
-
+  margin: 50px auto;
   width: 90%;
 }
 
 /* off section */
 .off_section {
-  margin-top: 50px;
-  margin-left: 8%;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
 }
 
 /* our benifit */
 #our_benifit {
   margin-top: 50px;
-  margin-left: 8%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 #our_benifit > h2 {
   text-decoration: underline rgb(242, 208, 12);
 }
 #unmissable {
   margin-top: 50px;
-  margin-left: 8%;
 }
 #unmissable > h2 {
+  text-align: center;
   text-decoration: underline rgb(242, 208, 12);
   margin-bottom: 20px;
 }
-#unmissable > div > img {
-  margin-left: 20px;
+#unmissable > div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .offer {
   margin-top: 50px;
-  margin-left: 10%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #Winterwear {
+  text-align: center;
   margin-top: 50px;
-  margin-left: 8%;
 }
 #Winterwear > h2 {
   text-decoration: underline rgb(242, 208, 12);
   margin-bottom: 20px;
 }
+#Winterwear > div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 #Winterwear > div > img {
-  margin-left: 20px;
+  margin: 10px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 /* trending */
 #trending {
+  text-align: center;
   margin-top: 50px;
-  margin-left: 8%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 #trending > h2 {
   text-decoration: underline rgb(242, 208, 12);
   margin-bottom: 20px;
 }
+#trending > div {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 10px;
+}
+
 #trending > div > img {
-  margin-left: 20px;
   margin-bottom: 20px;
 }
 
@@ -225,7 +104,10 @@
 
 #watces {
   margin-top: 50px;
-  margin-left: 8%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 #watces > h2 {
   text-decoration: underline rgb(242, 208, 12);
@@ -236,195 +118,98 @@
   margin-bottom: 20px;
   width: 95%;
 }
-#top-category {
-  margin-left: 8%;
 
-  height: 350px;
-  display: flex;
-}
 #top_btn {
   display: flex;
   flex-direction: column;
-  width: 10%;
-  height: 100%;
+  width: 15%;
+  height: auto;
   background-color: aliceblue;
 }
 #top_btn > button {
-  margin-bottom: 10px;
-  width: 120px;
-  height: 50px;
+  width: 100%;
+  font-weight: 500;
+  padding: 26px;
+  font-size: 18px;
   background-color: aliceblue;
-  border: none;
+  border: 1px solid rgb(243, 225, 225);
 }
-
-#womens_in_top_category > img {
-  height: 100%;
-  margin-right: 20px;
-  margin-left: 20px;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+#top-category img {
+  width: 250px;
+  height: 380px;
+  object-fit: cover;
+  object-position: center;
+  margin: 12px;
 }
-#mens_in_top_category > img {
-  height: 100%;
-  margin-right: 20px;
-  margin-left: 20px;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-}
-#kids_in_top_category > img {
-  height: 100%;
-  margin-right: 20px;
-  margin-left: 20px;
-
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-}
-#shoes_in_top_category > img {
-  height: 100%;
-  margin-right: 20px;
-  margin-left: 20px;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-}
-#beauty_in_top_category > img {
-  height: 100%;
-  margin-right: 20px;
-  margin-left: 100px;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+#top-category {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 #top-category1 > h2 {
-  margin-left: 8%;
-  margin-top: 50px;
+  text-align: center;
   text-decoration: underline rgb(242, 208, 12);
 }
 /* top in deals */
 #top_deal {
-  margin-left: 8%;
+  text-align: center;
   margin-top: 50px;
   text-decoration: underline rgb(242, 208, 12);
+  gap: 20px;
 }
-#top_deal > div > img {
-  margin-left: 20px;
-  margin-bottom: 20px;
+#top_deal > div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 20px;
 }
+
 #top_brands_discount {
-  margin-left: 8%;
+  align-items: center;
+  text-align: center;
   margin-top: 50px;
   text-decoration: underline rgb(242, 208, 12);
 }
 
 #top_brands_discount img {
-  margin-left: 20px;
   margin-bottom: 20px;
   height: 20%;
   width: 13%;
-  margin-left: 20px;
 }
 #season_hotest_pic {
-  margin-left: 8%;
+  text-align: center;
   margin-top: 50px;
   text-decoration: underline rgb(242, 208, 12);
 }
 #season_hotest_pic img {
   border-radius: 10px;
-  margin-left: 20px;
-  margin-bottom: 20px;
   height: 35%;
   width: 22%;
-  margin-left: 20px;
+  margin: 10px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 #top_brands_we_love {
-  margin-left: 8%;
+  text-align: center;
   margin-top: 50px;
   text-decoration: underline rgb(242, 208, 12);
 }
 #top_brands_we_love img {
   border-radius: 10px;
-  margin-left: 20px;
-  margin-bottom: 20px;
   height: 35%;
+  margin: 10px;
   width: 14%;
-  margin-left: 20px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 #value_pics {
-  margin-left: 8%;
+  text-align: center;
   margin-top: 50px;
   text-decoration: underline rgb(242, 208, 12);
 }
 #value_pics img {
-  margin: 15px;
+  border-radius: 15px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-}
-#subscribe {
-  height: 300px;
-  margin-left: 8%;
-}
-#subscribe {
-  margin-top: 50px;
-  display: flex;
-  justify-content: space-between;
-}
-#email_subs {
-  margin-top: 20px;
-  margin-left: 20px;
-}
-#email_subs > p {
-  margin-bottom: 30px;
-}
-#email_subs > input {
-  width: 300px;
-  height: 50px;
-  margin-left: 10px;
-}
-#email_subs > button {
-  width: 200px;
-  height: 50px;
-  background-color: black;
-  color: white;
-  border-radius: 5px;
-}
-#play_store {
-  margin-right: 80px;
-  margin-top: 20px;
-}
-#play_store > p {
-  margin-bottom: 30px;
-}
-#play_store > button {
-  height: 60px;
-  width: 150px;
-  background-color: black;
-  color: white;
-  text-anchor: middle;
-  font-size: larger;
-  border-radius: 5px;
-  margin-bottom: 20px;
-}
-#footer {
-  margin-top: 50px;
-
-  height: 500px;
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  margin-left: 8%;
-  font-size: larger;
-}
-#footer a {
-  text-decoration: none;
-  color: rgb(158, 156, 156);
-  margin-bottom: 5px;
-}
-#footer a:hover {
-  color: orange;
-}
-#contact {
-  display: flex;
-  margin-top: 120px;
-  margin-left: 8%;
-  justify-content: space-evenly;
-  font-size: larger;
-}
-#contact img {
-  width: 10%;
-  margin-right: 20px;
+  margin: 15px;
 }
 
 #myBtn {
@@ -447,10 +232,6 @@
   background-color: orange;
 }
 
-#logo1 {
-  display: none;
-}
-
 @media all and (min-width: 810px) and (max-width: 1280px) {
   /* <!----------------------------------------------- Header -----------------------------------------------> */
   #top_bar {
@@ -466,21 +247,11 @@
   #right_top {
     display: none;
   }
-  /* #logo {
-    position: relative;
-    top: 8px;
-    left: 84px;
-    margin-right: 150px;
-    padding: 0%;
-    width: 70%;
-   
-  } */
 
   #nav_bar {
     display: grid;
     grid-template-columns: repeat(5, 20%);
     column-gap: -150px;
-
     font-size: small;
   }
   #searchbar {
@@ -555,12 +326,15 @@
   }
   #top_deal {
     margin-top: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   #top_deal > h2 {
     text-align: center;
   }
   #top_deal > div > img {
-    width: 42%;
+    width: 200px;
   }
   #top_brands_discount > h2 {
     text-align: center;
@@ -571,9 +345,7 @@
   #season_hotest_pic > div > img {
     width: 20%;
   }
-  #season_hotest_pic {
-    margin-left: 10%;
-  }
+
   #top_brands_we_love > h2 {
     text-align: center;
   }
@@ -627,12 +399,7 @@
   #right_top {
     display: none;
   }
-  #logo {
-    position: relative;
-    top: 8px;
-    left: 84px;
-    width: 80%;
-  }
+
   #nav-bar {
     flex-direction: column;
     font-size: smaller;
@@ -643,7 +410,7 @@
 
     margin: auto;
     /* width: 70%;
-    margin-left: 10%; */
+      margin-left: 10%; */
   }
   #searchbar {
     display: none;
