--- a/CSS/HeaderFooter.css
+++ b/CSS/HeaderFooter.css
@@ -1,5 +1,44 @@
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box !important;
+  scroll-behavior: smooth;
+}
+.flex {
+  display: flex;
+  align-items: center;
+}
+img,
+input,
+select,
+button {
+  cursor: pointer;
+}
+a {
+  text-decoration: none !important;
+}
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: red;
+  color: white;
+  cursor: pointer;
+  padding: 10px;
+  border-radius: 4px;
+}
+
+#myBtn:hover {
+  background-color: orange;
+}
 /*todo <!----------------------------------------------- < Header Start > -----------------------------------------------> */
 #top_bar {
+  min-height: 30px;
   margin: auto;
   display: flex;
   justify-content: space-between;
