--- a/CSS/HeaderFooter.css
+++ b/CSS/HeaderFooter.css
@@ -2,6 +2,8 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box !important;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   scroll-behavior: smooth;
 }
 .flex {
@@ -36,6 +38,17 @@ a {
 #myBtn:hover {
   background-color: orange;
 }
+.CredsName2 {
+  cursor: pointer;
+  color: rgb(255, 136, 0);
+  background-color: rgb(255, 255, 255);
+  padding: 10px;
+  border-radius: 10px;
+}
+.CredsName2:hover {
+  color: red;
+  background-color: #fcf3db;
+}
 /*todo <!----------------------------------------------- < Header Start > -----------------------------------------------> */
 #top_bar {
   min-height: 30px;
@@ -50,6 +63,11 @@ a {
   width: 100%;
   z-index: 1;
   top: 0px;
+}
+#top_bar h5 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 #EmptyNavSpace {
   display: none;
@@ -103,6 +121,7 @@ a {
 #nav_bar {
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
   background-color: #f7f7f8;
   text-align: center;
   width: 100%;
@@ -268,6 +287,7 @@ a {
 }
 #email_subs > input {
   width: 300px;
+  padding: 10px;
   height: 50px;
 }
 #email_subs > button {
@@ -285,13 +305,24 @@ a {
   margin-bottom: 30px;
 }
 #play_store > button {
-  height: 60px;
   width: 150px;
+  padding: 10px 20px;
   background-color: black;
   color: white;
-  text-anchor: middle;
+  text-align: left;
   font-size: larger;
   border-radius: 5px;
   margin-bottom: 20px;
 }
 /*todo <!----------------------------------------------- < Footer End > -----------------------------------------------> */
+.LoadingBox {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+#PageHeadX {
+  margin: 10px auto;
+  font-size: 40px;
+}
