--- a/CSS/mensAllProducts.css
+++ b/CSS/mensAllProducts.css
@@ -1,20 +1,15 @@
-* {
-  margin: 0px;
-  padding: 0px;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
 #productName {
   padding-left: 12px;
   height: 40px;
   width: 20%;
   border: 1px solid grey;
 }
+
 #container {
   /* border: 1px solid red; */
   background-color: lightgray;
   width: 95%;
-  margin: 40px auto;
+  margin: 12px 40px auto;
   display: grid;
   grid-template-columns: repeat(5, 200px);
   gap: 20px;
@@ -30,7 +25,8 @@
   /* border: 1px solid red; */
   width: 98%;
   margin: auto;
-  display: grid;
+  display: flex;
+  /* display: grid; */
   grid-template-columns: repeat(4, 1fr);
   gap: 5px;
 }
@@ -81,235 +77,12 @@
   color: grey;
   margin: 25px;
 }
-
-/* <!----------------------------------------------- Header CSS -----------------------------------------------> */
-#top_bar {
-  margin: auto;
-  display: flex;
-  justify-content: space-between;
-  color: white;
-  background-color: black;
-  text-align: center;
-  height: 50px;
-  padding-left: 5%;
-  padding-right: 5%;
+div,
+section {
+  border: 1px solid red;
 }
-#top_bar h5 {
-  margin: auto;
-}
-#left_top {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 40px;
-}
-
-#right_top {
-  width: 30%;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-}
-/* html {
-    position: relative;
-  } */
-#nav_bar {
-  z-index: 1000000;
-  position: sticky;
-  top: 0px;
-  padding: 1px;
-  background-color: rgb(246, 249, 247);
-}
-#nav_bar > div {
-  margin: 20px;
-  margin-left: 240px;
-  width: 80%;
-  display: flex;
-  justify-content: right;
-  background-color: rgb(246, 249, 247);
-  text-align: center;
-}
-#logo {
-  position: absolute;
-  border-radius: 5px;
-  width: 230px;
-  height: 90px;
-}
-#nav_bar > div > a > input {
-  height: 33px;
-  padding: 3px;
-  width: 250px;
-}
-#nav_bar > div > a {
-  text-decoration: none;
-  color: black;
-  margin: auto;
-}
-/* <!----------------------------------------------- Footer CSS -----------------------------------------------> */
-#subscribe {
-  height: 300px;
-  margin-left: 8%;
-}
-#subscribe {
-  margin-top: 50px;
-  display: flex;
-  justify-content: space-between;
-}
-#email_subs {
-  margin-top: 20px;
-  margin-left: 20px;
-}
-#email_subs > p {
-  margin-bottom: 30px;
-}
-#email_subs > input {
-  width: 300px;
-  padding: 0px 8px;
-  height: 50px;
-  margin-left: 10px;
-}
-#email_subs > button {
-  width: 200px;
-  height: 50px;
-  background-color: black;
-  color: white;
-  border-radius: 5px;
-}
-#play_store {
-  margin-right: 80px;
-  margin-top: 20px;
-}
-#play_store > p {
-  margin-bottom: 30px;
-}
-#play_store > button {
-  padding: 10px;
-  height: auto;
-  width: 150px;
-  background-color: black;
-  color: white;
-  font-size: 18px;
-  font-weight: bold;
-  border-radius: 5px;
-  margin-bottom: 20px;
-}
-#footer {
-  margin-top: 50px;
-  height: 500px;
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  margin-left: 8%;
-  font-size: larger;
-}
-#footer a {
-  text-decoration: none;
-  color: rgb(158, 156, 156);
-  margin-bottom: 5px;
-}
-#footer a:hover {
-  color: orange;
-}
-#contact {
-  display: flex;
-  margin-top: 120px;
-  margin-left: 8%;
-  margin-bottom: 15px;
-  justify-content: space-evenly;
-  font-size: larger;
-}
-#contact img {
-  width: 10%;
-  margin-right: 20px;
-}
-
-#myBtn {
-  display: none;
-  position: fixed;
-  bottom: 20px;
-  right: 30px;
-  z-index: 99;
-  font-size: 18px;
-  border: none;
-  outline: none;
-  background-color: red;
-  color: white;
-  cursor: pointer;
-  padding: 15px;
-  border-radius: 4px;
-}
-
-#myBtn:hover {
-  background-color: orange;
-}
-
-.sidenav {
-  height: 100%;
-  width: 0;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: #111;
-  overflow-x: hidden;
-  transition: 0.5s;
-  padding-top: 60px;
-}
-
-.sidenav a {
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
-}
-
-.sidenav a:hover {
-  color: #f1f1f1;
-}
-
-.sidenav .closebtn {
-  position: absolute;
-  top: 0;
-  right: 25px;
-  font-size: 36px;
-  margin-left: 50px;
-}
-#side_menu {
-  display: none;
-}
-
 /*? ----------------------------Medium Screen Sizes -------------------------------- */
 @media all and (min-width: 810px) and (max-width: 1200px) {
-  /* <!----------------------------------------------- Header -----------------------------------------------> */
-  #top_bar {
-    flex-direction: column;
-    height: auto;
-    padding: 7px;
-  }
-  #top_bar h5 {
-    font-size: 10px;
-    font-weight: light;
-  }
-  #right_top {
-    display: none;
-  }
-  #logo {
-    position: relative;
-    top: 8px;
-    left: 84px;
-  }
-  #nav_bar > div {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    gap: 2px;
-    margin: auto;
-  }
-  #searchbar {
-    display: none;
-  }
-  #signin {
-    background-color: #f7f4f4;
-    padding: 10px;
-  }
   /*===========my media==========*/
   #container {
     display: grid;
@@ -336,67 +109,7 @@
   * {
     font-size: 12px;
   }
-  /* <!----------------------------------------------- Header -----------------------------------------------> */
-  #top_bar {
-    flex-direction: column;
-    height: auto;
-    padding: 7px;
-  }
-  #top_bar h5 {
-    font-size: 10px;
-    font-weight: light;
-  }
-  #right_top {
-    display: none;
-  }
-  #logo {
-    position: relative;
-    top: 8px;
-    left: 84px;
-  }
-  #nav-bar {
-    flex-direction: column;
-  }
-  #nav_bar > div {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    gap: 2px;
-    margin: auto;
-  }
-  #searchbar {
-    display: none;
-  }
-  #signin {
-    background-color: #f7f4f4;
-    padding: 10px;
-  }
 
-  /* <!----------------------------------------------- Footer -----------------------------------------------> */
-  #subscribe {
-    flex-direction: column;
-  }
-  #email_subs > input {
-    margin: auto;
-    margin-bottom: 2px;
-    border: 1px solid black;
-  }
-  #play_store {
-    margin: auto;
-  }
-  #email_subs > button {
-    width: 95%;
-  }
-  #contact {
-    margin: auto;
-    display: grid;
-    margin: 20px;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 10px;
-    align-items: center;
-  }
-  #footer {
-    grid-template-columns: repeat(3, 1fr);
-  }
   #container {
     display: grid;
     grid-template-columns: repeat(2, 200px);
