--- a/CSS/Admin.css
+++ b/CSS/Admin.css
@@ -51,8 +51,7 @@ input:focus {
   outline: 2px solid rgb(91, 200, 246);
 }
 .CRUDsections {
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
-    rgba(0, 0, 0, 0.22) 0px 10px 10px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
   width: 90%;
   margin: auto;
   padding: 20px;
