--- a/CSS/MediaQ.css
+++ b/CSS/MediaQ.css
@@ -1,3 +1,6 @@
+.swal-modal * {
+  filter: saturate(1.4) !important;
+}
 /*todo ----------------------------Small Screen Sizes -------------------------------- */
 @media all and (min-width: 320px) and (max-width: 809px) {
   * {
