--- a/CSS/Orders.css
+++ b/CSS/Orders.css
@@ -22,20 +22,20 @@ a {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 25px;
-  width: 90%;
+  width: 100%;
   margin: auto;
   height: auto;
 }
 .container div {
   position: relative;
   height: auto;
+  text-align: center;
   padding: 10px;
-  padding-bottom: 70px;
+  padding-bottom: 28px;
 
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 .cardbutton {
-  position: absolute;
   width: 40%;
   font-size: 18px;
   padding: 5px;
@@ -79,7 +79,6 @@ section {
   border-radius: 5px;
   color: white;
   text-decoration: none;
-  position: absolute;
   top: 0px;
   right: -170px;
   border: 0px;
@@ -100,10 +99,18 @@ section {
   width: 150px;
   height: auto;
 }
+#Secondtopheadd {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 0 !important;
+}
+
 .showproducttop {
-  position: absolute;
-  right: 200px;
-  top: 92px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  gap: 12px;
 }
 .manage-order {
   font-size: 40px;
@@ -113,6 +120,10 @@ section {
   display: none;
 }
 #tophead > div {
+  margin: 15px;
+  padding: 15px;
+}
+#tophead > div:nth-child(2) {
   margin: 15px;
   padding: 15px;
   height: auto;
